<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center|top"
    android:padding="16dp"
    android:background="@drawable/bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="35dp"/>


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/cup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="24dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textViewScoreMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray"
        android:text="Your score is 0 out of 0"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/finishAndReplayButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:layout_marginTop="20dp"
        android:text="@string/finish"/>


</androidx.appcompat.widget.LinearLayoutCompat>